fix(note): Batch 4 低分 59 篇 S/M 项修复 + 合并候选 21 全豁免（note-health 2026-08-25）
- 59 篇 <55% 文章按 Phase 2 findings 修 S/M 项：frontmatter summary 一句话化、补一句话定位、代码块语言标记、❌/✅ 对比小节、选型对比表、互链修正
- 修复 fan-out 引入的 15 处断链（相对路径层级错 / 虚构目标改指真实文章）
- 21 个合并检测候选逐一复核：全部为单主题深文（10.business 模板深文 11 + 源码/算法/缓存/演进/叙事 10），0 篇需拆分
- L 工作量项 58 条列延后清单（见 .health-tmp 报告）

Co-Authored-By: Claude <noreply@anthropic.com>